force-app/main/default/objects/AcctPlanPaymentDomestic__c/AcctPlanPaymentDomestic__c.object-meta.xml
<CustomObject>
    <label>Account Plan Payment Domestic</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Plan Payment Domestic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plan Payment Domestic</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>