force-app/main/default/objects/AcctPlanPaymentDomestic__c/fields/AcctPlanPaymentMethodDomestic__c.field-meta.xml
<CustomField>
    <fullName>AcctPlanPaymentMethodDomestic__c</fullName>
    <description>Account Plan Payment Method Domestic</description>
    <label>Account Plan Wallet</label>
    <referenceTo>AcctPlanWallet__c</referenceTo>
    <relationshipLabel>Account Plan Payment Domestic</relationshipLabel>
    <relationshipName>Account_Plan_Payment_Domestic</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>