force-app/main/default/objects/AcctPlanPaymentDomestic__c/fields/AvgProvidentFund__c.field-meta.xml
<CustomField>
    <fullName>AvgProvidentFund__c</fullName>
    <description>Average Provident Fund</description>
    <inlineHelpText>Average Provident Fund</inlineHelpText>
    <label>Average Provident Fund</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>