force-app/main/default/objects/AcctPlanPaymentDomestic__c/fields/VolumePercent__c.field-meta.xml
<CustomField>
    <fullName>VolumePercent__c</fullName>
    <description>สัดส่วนของการจ่ายเงินแต่ละวิธีว่ามีสัดส่วนเท่าใด</description>
    <inlineHelpText>สัดส่วนของการจ่ายเงินแต่ละวิธีว่ามีสัดส่วนเท่าใด</inlineHelpText>
    <label>%Vol</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>