force-app/main/default/objects/AcctPlanPaymentDomestic__c/fields/WalletFee__c.field-meta.xml
<CustomField>
    <fullName>WalletFee__c</fullName>
    <description>Wallet ของ Cash Fee ในส่วนที่เกี่ยวข้องกับธุรกรรมการจ่ายเงินจากในประเทศ</description>
    <formula>Volume__c 

* if(isnull( AvgProvidentFund__c),1,AvgProvidentFund__c)
*  if(isnull( FeeCharge__c),1,FeeCharge__c/100)
* 12</formula>
    <inlineHelpText>Wallet ของ Cash Fee ในส่วนที่เกี่ยวข้องกับธุรกรรมการจ่ายเงินจากในประเทศ</inlineHelpText>
    <label>Wallet Cash fee (Yearly)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>